updated html assignment

--- a/assignments/week2/firstwebpage.html
+++ b/assignments/week2/firstwebpage.html
@@ -1,4 +1,11 @@
+<!--purpose: learning, grocery list, comments. Heading, paragraphs, unordered lists-->
 <h1>My First Web Page</h1>
 <h2>Here is some text for your enjoyment</h2>
 <p>hello, there how are you?</p>
 <p>I am doing well, thank you for asking</p>
+<h3>Grocery List</h3>
+<ul>
+    <li>oatmilk</li>
+    <li>bananas</li>
+    <li>almond butter</li>
+<ul>
