added closing p tags

--- a/homework/homework2-1.html
+++ b/homework/homework2-1.html
@@ -1,5 +1,5 @@
 <h1>Building Android Apps with HTML, CSS, and JavaScript</h1>
-<p>Building Android Apps with HTML, CSS, and JavaScript, 2nd Edition, 178 pages, is written by Jonathan Stark, Brian Jepson, Brian MacDonald. Published by O'Reilly Media, Inc. in January 2012. This ebook is for those interested in creating Android web based apps. The ebook appears to be beginner level in that it only requires that the reader be novicely familiar with HTML, CSS, and Javascript.  
+<p>Building Android Apps with HTML, CSS, and JavaScript, 2nd Edition, 178 pages, is written by Jonathan Stark, Brian Jepson, Brian MacDonald. Published by O'Reilly Media, Inc. in January 2012. This ebook is for those interested in creating Android web based apps. The ebook appears to be beginner level in that it only requires that the reader be novicely familiar with HTML, CSS, and Javascript.</p>
 
 <h1>Beautiful JavaScript</h1>
-<p>Beautiful JavaScript was written in August 2015 by Anton Kovalyov, published by O'Reilly Media, Inc, 168 pages. This ebook discusses how and why Javascript has stood the test of time as a programmimg langauage. This is despite attempts to replicate or replace it. Experts in the language discuss what they love about the Javascript. 
+<p>Beautiful JavaScript was written in August 2015 by Anton Kovalyov, published by O'Reilly Media, Inc, 168 pages. This ebook discusses how and why Javascript has stood the test of time as a programmimg langauage. This is despite attempts to replicate or replace it. Experts in the language discuss what they love about the Javascript.</p>
