--- a/assignments/week2/secondwebpage.html
+++ b/assignments/week2/secondwebpage.html
@@ -23,3 +23,7 @@
 <img src ="bichon frise brown.jpg" alt="brown bichon frise with white fur on chest sitting and smiling with one paw hanging out in wood crate."" width="640" length="426">
 <p>Photo by Helena Lopes</p>
 
+<figure>
+    <img src="bichon frise side.jpg"alt="An image of bichon frise from the side"/>
+    <figcaption>Identifying dogs that is like your dog is important</figcaption>
+    </figure>
