--- a/assignments/week3/morecss.html
+++ b/assignments/week3/morecss.html
@@ -9,21 +9,52 @@
 <!--Internal Stylesheets-->
 
 <style>
-img{width:200px;
+img{height:250px;
 border-width: 5px;
 border-style:solid;
 border-color: burlywood;
 border-radius: 20px;}
 
-.portraits {border-color:green;}
+.portrait {border-color:maroon;}
+#light{
+    /*border-style:dashed;*/
+    box-shadow: 10px 10px crimson;
+}
+
+div{weight:600px;
+color:yellow;
+}
+div h1 {
+    color:darkblue;
+}
+div .portrait {
+    border-color:gold}
+#Walk{
+    color:teal;}
 </style>
+
 </head>
 <body>
     <h1>Pink Clock Stuff</h1>
-<img class="portrait"src="pinkclock.jpg" alt="a clock on a pink background."/>
-<img src="black_lightening.jpg" alt="lightening on blackground over the water."/>
-<a href="https://www.google.com/" target="_blank"><img class="portrait" src="burningmatchsit.jpg" alt="looks like a match sitting on the edge of a desk sitting."/></a>       
-<img src="walkingperson.jpg" alt="Hip looking person wear sunglasses walking holdiing a bag"/>
+<img class="portrait" src="pinkclock.jpg" alt="a clock on a pink background."/>
+
+<img id="light" src="black_lightening.jpg" alt="lightening on blackground over the water."/>
+
+<a href="https://www.google.com/" target="_blank"><img src="burningmatchsit.jpg" alt="looks like a match sitting on the edge of a desk sitting."/></a>    
+
+<img class="portrait" src="walkingperson.jpg" alt="Hip looking person wear sunglasses walking holdiing a bag"/>
+
+ <div>
+    <h1>Clock <span id="Walk">Walk</span></h1>
+<img class="portrait" src="pinkclock.jpg" alt="a clock on a pink background."/>
+
+<img id="light" src="black_lightening.jpg" alt="lightening on blackground over the water."/>
+
+<a href="https://www.google.com/" target="_blank"><img src="burningmatchsit.jpg" alt="looks like a match sitting on the edge of a desk sitting."/></a>    
+   
+<img class="portrait" src="walkingperson.jpg" alt="Hip looking person wear sunglasses walking holdiing a bag"/>
+
+ </div>
 
 </body>
 </html>
