added layout assignment

--- a/assignments/week3/html5elements.html
+++ b/assignments/week3/html5elements.html
@@ -5,7 +5,31 @@
     <head> 
         <meta charset="utf-8" />
         <title>Looking at HTMl5 Elements</title>
-<style></style>
+<style>
+
+    #bluebox,#purplebox{
+        display:inline-block;
+        width:200px;
+        height: 200px;
+        background-color:blue;
+        padding-left: 20px;
+        padding-top: 20px;
+        margin-bottom: 20px;
+        margin-left: 20px;
+        border: greenyellow 20px solid;
+        border-radius: 30px;
+        }
+    
+    #purplebox{
+        background-color:purple;
+    }
+    #greenbox{
+        width:300px;
+        height: 300px;
+        background-color:green;
+    }
+    
+</style>
 
     </head>
     <nav></nav>
@@ -14,6 +38,11 @@
     <body>
         <article></article>
         <section></section>
+
+        <div id="bluebox"><p>Hello!</p> </div>
+        <div id="purplebox"> </div>
+        <div id="greenbox"> </div>
+
 
     </body>
 
