--- a/projects/hobby.html
+++ b/projects/hobby.html
@@ -1,26 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="utf-8/>"
+<meta charset="utf-8"/>
 <title>Boxing: My Favorite Hobby-Why & How</title>
 </head>
 <body>
     <p>One of my favorite hobby's right now is boxing. I enjoy boxing it is fun! I have been boxing for several years now. It is something that can do by myself or with others, in say, a class. What make it fun is that it involves various activities that make you a better boxer. For instance, you can jog and jumprope for better stamina or your shadowbox by yourself or spar with a partner for better technique.It is something you can learn to do if you are interested. </p>
     <p>I would say that first thing you should do in order to start boxing is learn basic technique. You can do this by either taking a class or doing research online either via articles or videos---preferable video so you can really see the basic technique! Basic technique for myself would be boxing stance and movements and fundemental punches. From there you can take what you in your own time shadowbox. Shadowboxing is imaginary boxing by yourself. Shadowboxing help to improve your basic technique.</p>
     <p>My recommendation to get started with boxing is 
-    1) learn basic fight stance 2) learn the fundemental punches, and 3) practice shadowboxing. Below are some resources related to the following areas. </p>
+    learn basic fight stance, learn the fundemental punches, and, practice shadowboxing. Below are some resources related to the following areas. </p>
 
-    <ol>
+    <ul>
         <li>Basic Stance - How to position your feet, body, and hands.</li>
+    </ul>
     
 <p>https://blog.joinfightcamp.com/blogs/boxing-training/the-ultimate-guide-to-boxing-stances</p>
 <p>https://expertboxing.com/the-perfect-boxing-stance
     </p>
     <p>https://youtu.be/IUGq3Ah6gVU</p>
     
-
+    <ul>
 
 <li>Fundemental Punches - What are the basic punches and how are they "numbered"/communicated. </li>
+</ul>
 
 <p>https://blog.joinfightcamp.com/blogs/boxing-training/six-6-basic-boxing-punches</p>
 
@@ -28,15 +30,15 @@
 <p>https://youtu.be/o9qPlLLGv6k</p>
 <p>https://youtu.be/MV_yF0MTujM</p>
 
-
+<ul>
 <li>Shadowboxing - What it is. Why it's done.</li>
- 
+</ul>
 <p>https://youtu.be/i12A6G_LiJo</p>
 <p>https://youtu.be/yPm3x62dhr8</p>
 <p>https://www.gloveworx.com/blog/shadowboxing-part-one/</p>
 
 
-</ol>
+
 
 </body>
 </html>
