--- a/projects/hobbycss5-1.html
+++ b/projects/hobbycss5-1.html
@@ -46,7 +46,7 @@ text-align: justify;
 padding:20px;
 }
 #main #section{
-width: 400px;
+width: 450px;
 background-color:red;
 color: blanchedalmond;
 border-radius:20px;
@@ -73,10 +73,10 @@ overflow-wrap: normal;
 <body>
     <div id="container">
 
-    <img class="picture" style="position:absolute; left:500px; top:500px;" src="hobby-images/200x150boxingstance1.jpg" alt="Photo show good boxing stance, just shows bottom half of person">
+    <img class="picture" style="position:absolute; left:550px; top:500px;" src="hobby-images/200x150boxingstance1.jpg" alt="Photo show good boxing stance, just shows bottom half of person">
 
     <div>
-    <h1 id="header">Boxing is Now My Favorite Hobby: Why & How<h1>
+    <h1 id="header">Boxing is Now My Favorite Hobby: Why & How To<h1>
     </div>
 
     <div id="main"><div id="article">
@@ -89,14 +89,14 @@ overflow-wrap: normal;
     </div>
 
 <div id="main"><div id="section">
-    <ul>
-        <li>Basic Stance - How to position your feet, body, and hands.</li>
-    </ul>
+    <dl>
+    <dt>Basic Stance - How to position your feet, body, and hands.</dt><br>
+    <dd>-https://blog.joinfightcamp.com/blogs/boxing-training/the-ultimate-guide-to-boxing-stances</dd>
+    <dd>-https://expertboxing.com/the-perfect-boxing-stance</dd>
+    <dd>-https://youtu.be/IUGq3Ah6gVU</dd>
+    </dl>
     
-<p>https://blog.joinfightcamp.com/blogs/boxing-training/the-ultimate-guide-to-boxing-stances</p>
-<p>https://expertboxing.com/the-perfect-boxing-stance
-    </p>
-    <p>https://youtu.be/IUGq3Ah6gVU</p>
+
 
     <ul>
 <br>
