--- a/projects/hobbycss5-1.html
+++ b/projects/hobbycss5-1.html
@@ -39,7 +39,7 @@ margin-top:20px;
 
 #main #article{
 /*width: 616px;*/
-background-color:black;
+background-color:black; 
 color: blanchedalmond;
 border-radius:20px;
 text-align: justify;
@@ -54,6 +54,11 @@ text-align: justify;
 padding:20px;
 overflow-wrap: normal;
 }
+
+a { color: inherit;
+text-decoration:none;
+list-style: square; } 
+
 
 
 #footer{
@@ -90,10 +95,10 @@ overflow-wrap: normal;
 
 <div id="main"><div id="section">
     <dl>
-    <dt>Basic Stance - How to position your feet, body, and hands.</dt><br>
-    <dd>-https://blog.joinfightcamp.com/blogs/boxing-training/the-ultimate-guide-to-boxing-stances</dd>
-    <dd>-https://expertboxing.com/the-perfect-boxing-stance</dd>
-    <dd>-https://youtu.be/IUGq3Ah6gVU</dd>
+    <dt>Basic Stance - How to position your feet, body, and hands.</dt><br> 
+    <dd>-<a href="https://blog.joinfightcamp.com/blogs/boxing-training/the-ultimate-guide-to-boxing-stances " target="_blank">Basic Stance Info 1</a></dd>
+    <dd>-<a href="https://expertboxing.com/the-perfect-boxing-stance" target="_blank">Basic Stance Info 2</a></dd>
+    <dd>-<a href="https://youtu.be/IUGq3Ah6gVU" target="_blank">Basic Stance Info 3</a></dd>
     </dl>
     
 
