went over if statments

--- a/assignments/week6/introjavascript.html
+++ b/assignments/week6/introjavascript.html
@@ -17,6 +17,15 @@
         var number1 = 22;
         var number2 = 44;
         console.log(number1 + number2);
+        
+
+        var userAge = 10 
+        if (userAge == 21) {console.log("Congrats you now drink whatever you want");
+    }
+        else {console.log("You cannot drink yet!")
+    };
+
+        
     </script>
 </body>
 </html>
