--- a/projects/hobbycss5-1.html
+++ b/projects/hobbycss5-1.html
@@ -56,8 +56,7 @@ overflow-wrap: normal;
 }
 
 a { color: inherit;
-text-decoration:none;
-list-style: square; } 
+text-decoration:none;} 
 
 
 
@@ -96,7 +95,7 @@ list-style: square; }
 <div id="main"><div id="section">
     <dl>
     <dt>Basic Stance - How to position your feet, body, and hands.</dt><br> 
-    <dd>-<a href="https://blog.joinfightcamp.com/blogs/boxing-training/the-ultimate-guide-to-boxing-stances " target="_blank">Basic Stance Info 1</a></dd>
+    <dd><a href="https://blog.joinfightcamp.com/blogs/boxing-training/the-ultimate-guide-to-boxing-stances " target="_blank">Basic Stance Info 1</a></dd>
     <dd>-<a href="https://expertboxing.com/the-perfect-boxing-stance" target="_blank">Basic Stance Info 2</a></dd>
     <dd>-<a href="https://youtu.be/IUGq3Ah6gVU" target="_blank">Basic Stance Info 3</a></dd>
     </dl>
