--- a/assignments/week6/introjavascript.html
+++ b/assignments/week6/introjavascript.html
@@ -116,14 +116,30 @@ var myEmployee2 = {
     "age": 40,
     "status":"temporary",
     "employer":"Starbucks",
-    "active": true
+    "active": true,
+    "education":[
+    {
+institution:"West Valley College",
+years: 2,
+
+}
+]
 };
 console.log(myEmployee2["status"])
 myEmployee2.status;
 myEmployee2.name = "brisimy";
-console.log(myEmployee2);
-</script>
+console.log(myEmployee2)
 
-</body>
 
+var myThirdObject = {
+    myProperty: 9,
+    myMethod: function sayHello(){
+        console.log ("Hello");
+    }
+};
+console.log(myThirdObject.myProperty );
+myThirdObject.myMethod();
+myThirdObject.myMethod;
+        </script>
+    </body>
 </html>
