--- a/assignments/week8/jquery.html
+++ b/assignments/week8/jquery.html
@@ -5,21 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Intro to jQuery</title>
-    <script>src="jquery-3.6.0.min.js"
-    </script>
+    <script src = "jquery-3.6.0.min.js"></script>
 </head>
 <body>
 
 <button id="darkmode">Dark Mode</button>
-
 <button id="lightmode">Light Mode</button>
-
 <br />
-<label>First Number</label>
-<input type = "number"/>
+<label for="number">First Number</label>
+<input type = "number" id="number1"/>
 
 <label>Second Number</label>
-<input type = "number"/>
+<input type = "number", id=/>
 
 <br />
 <button id ="calculate">Calculate!</button>
@@ -43,17 +40,24 @@
         // $() is the jQuery function, you can also write jQuery(); $(document).ready (function (){}); // DEPRECATED 
 
         $(function(){
+            $("#calculate").click(function(function(){var number1 =$("")})
 
             $("#darkmode").click(function()
-            {console.log("Clicked");
+            {console.log("Clicked!");
             $("body").css("background-color","black");
             $("body").css("color","white");
             
         });
         var myHeadings = $("h1");
         myHeadings.css("background-color","rgb(255,0,0)");
-        myHeadings.css("color","rgb(0,255,0)");
+        myHeadings.css("color","rgb(255,0,0)");
 
+        myHeadings.css({
+            "background-color": "rgb (255,0,0)",
+            "color": "rgb(0,255,0)",
+            "font-family": "Arial",
+            "font-size": "48px"
+        })
         //$(".myClass");
         //$("#myID");
         //$("ul li");
