--- a/assignments/week8/interest.html
+++ b/assignments/week8/interest.html
@@ -19,7 +19,7 @@
         box-shadow: 0 0 20px 40px rgb(189, 185, 185); 
         border-radius: 10px;
         border: 1px solid black;
-        margin: 20px 20px;
+        margin: 0 auto 0 auto;
 
     }
     h1{
