updated work on portfolio

--- a/assignments/week8/movingcircle.html
+++ b/assignments/week8/movingcircle.html
@@ -14,9 +14,21 @@
         border-radius: 50%;
     }
 </style>
-<script src="jquery-3.6.0.min.js"></script>
+<script src="jquery-3.6.0.min.js">
+
+    $("circle").keypress(function(event){
+        console.log("hello");
+    });
+    $function(){
+        $(docment).keypress(function (event){
+
+        });
+    }
+
+</script>
 </head>
 <body>
     <div id="circle"></div>
+    <!--<input id="text" type="text"-->
 </body>
 </html>
