update about text

--- a/projects/portfolio-website/about.html
+++ b/projects/portfolio-website/about.html
@@ -34,15 +34,9 @@
             <img src="profile500.jpg" alt="A image for host looking at the camera with wooden fence behind him" style="width:50%">        
         </div>
         <div class="maincontent">
-           <p>Brian is grew up San Jose, California and has lived in San Francisco since 2002. Before dabbling in email and ux design he worked in marketing and brand agency learning that best practices that impacted the goals of those clients. 
-
-<br/>
-
-            These experiences and an interest in research led him to purse a master's in social psychology which emphasized emotions, motivation, goal pursuits.
-             
-<br/>
-      
-            Now he looks to take these experiences and interest an use in ux design. Be able to trust his intuition in the design of computer applications brings Brian so much joy and allow to him to follow inclination to help others and things. </p> 
+           <p>Brian is grew up San Jose, California and has lived in San Francisco since 2002. Before dabbling in email and ux design he worked in marketing and brand agency learning that best practices that impacted the goals of those clients. </p>
+            <p>These experiences and an interest in research led him to purse a master's in social psychology which emphasized emotions, motivation, goal pursuits.</p>
+            <p>Now he looks to take these experiences and interest an use in ux design. Be able to trust his intuition in the design of computer applications brings Brian so much joy and allow to him to follow inclination to help others and things. </p>
         </div>
 
     </main>
