--- a/projects/hobby-images/hobbycss5-1.html
+++ b/projects/hobby-images/hobbycss5-1.html
@@ -77,7 +77,7 @@ text-decoration:none;}
 <body>
     <div id="container">
 
-    <img class="picture" style="position:absolute; left:550px; top:500px;" src="hobby-images/200x150boxingstance1.jpg" alt="Photo show good boxing stance, just shows bottom half of person">
+    <img class="picture" style="position:absolute; left:550px; top:500px;" src="200x150boxingstance1.jpg" alt="Photo show good boxing stance, just shows bottom half of person">
 
     <div>
     <h1 id="header">Boxing is Now My Favorite Hobby: Why & How To<h1>
