--- a/projects/portfolio-website/index.html
+++ b/projects/portfolio-website/index.html
@@ -8,7 +8,6 @@
 
         <link rel="stylesheet" href="styles/styles.css"/>
 
-
 </head>
 
 
@@ -38,5 +37,6 @@
         <p>Copyright &copy;Brian Luke Simpson</p>
     </footer>
 </div>
+<script src="scripts/main.js"></script>
 </body>
 </html>
